{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 37,
  "lineage": "63c41b21-026b-2c4a-5cde-a6cfcc4108d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kops-lnchub-com",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03066ef3ca088048e",
            "owner_id": "517778536975",
            "tags": {
              "KubernetesCluster": "kops.lnchub.com",
              "Name": "kops.lnchub.com",
              "kubernetes.io/cluster/kops.lnchub.com": "owned"
            },
            "vpc_id": "vpc-0df976c57c399126b"
          },
          "dependencies": [
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-0-0-0-0--0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03066ef3ca088048e",
            "id": "r-rtb-0b2f3fec9137a672e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b2f3fec9137a672e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.kops-lnchub-com",
            "aws_route_table.kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kops-lnchub-com",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b2f3fec9137a672e",
            "owner_id": "517778536975",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "KubernetesCluster": "kops.lnchub.com",
              "Name": "kops.lnchub.com",
              "kubernetes.io/cluster/kops.lnchub.com": "owned",
              "kubernetes.io/kops/role": "public"
            },
            "vpc_id": "vpc-0df976c57c399126b"
          },
          "dependencies": [
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ap-southeast-1a-kops-lnchub-com",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b8902ba80d13c14",
            "route_table_id": "rtb-0b2f3fec9137a672e",
            "subnet_id": "subnet-0f02e643572fe74a8"
          },
          "dependencies": [
            "aws_route_table.kops-lnchub-com",
            "aws_subnet.ap-southeast-1a-kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "masters-kops-lnchub-com",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:517778536975:security-group/sg-09f243a5cabe0fcb2",
            "description": "Security group for masters",
            "egress": [],
            "id": "sg-09f243a5cabe0fcb2",
            "ingress": [],
            "name": "masters.kops.lnchub.com",
            "name_prefix": null,
            "owner_id": "517778536975",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "kops.lnchub.com",
              "Name": "masters.kops.lnchub.com",
              "kubernetes.io/cluster/kops.lnchub.com": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df976c57c399126b"
          },
          "dependencies": [
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes-kops-lnchub-com",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:517778536975:security-group/sg-0c78b0084403f7ac9",
            "description": "Security group for nodes",
            "egress": [],
            "id": "sg-0c78b0084403f7ac9",
            "ingress": [],
            "name": "nodes.kops.lnchub.com",
            "name_prefix": null,
            "owner_id": "517778536975",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "kops.lnchub.com",
              "Name": "nodes.kops.lnchub.com",
              "kubernetes.io/cluster/kops.lnchub.com": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df976c57c399126b"
          },
          "dependencies": [
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-master-to-master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-775850515",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09f243a5cabe0fcb2",
            "self": false,
            "source_security_group_id": "sg-09f243a5cabe0fcb2",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-master-to-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1742190634",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c78b0084403f7ac9",
            "self": false,
            "source_security_group_id": "sg-09f243a5cabe0fcb2",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-lnchub-com",
            "aws_security_group.nodes-kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all-node-to-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3395611675",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c78b0084403f7ac9",
            "self": false,
            "source_security_group_id": "sg-0c78b0084403f7ac9",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nodes-kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-external-to-master-0-0-0-0--0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-399833645",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09f243a5cabe0fcb2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2111805844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09f243a5cabe0fcb2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2450604183",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c78b0084403f7ac9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.nodes-kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-1-2379",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-292334738",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09f243a5cabe0fcb2",
            "self": false,
            "source_security_group_id": "sg-0c78b0084403f7ac9",
            "to_port": 2379,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-lnchub-com",
            "aws_security_group.nodes-kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-2382-4000",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2382,
            "id": "sgrule-2303746280",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09f243a5cabe0fcb2",
            "self": false,
            "source_security_group_id": "sg-0c78b0084403f7ac9",
            "to_port": 4000,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-lnchub-com",
            "aws_security_group.nodes-kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-tcp-4003-65535",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4003,
            "id": "sgrule-1572665680",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09f243a5cabe0fcb2",
            "self": false,
            "source_security_group_id": "sg-0c78b0084403f7ac9",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-lnchub-com",
            "aws_security_group.nodes-kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-to-master-udp-1-65535",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-1889290382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09f243a5cabe0fcb2",
            "self": false,
            "source_security_group_id": "sg-0c78b0084403f7ac9",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-lnchub-com",
            "aws_security_group.nodes-kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-external-to-master-0-0-0-0--0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2130254574",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09f243a5cabe0fcb2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-external-to-node-0-0-0-0--0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1330345041",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c78b0084403f7ac9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nodes-kops-lnchub-com",
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ap-southeast-1a-kops-lnchub-com",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:517778536975:subnet/subnet-0f02e643572fe74a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.20.32.0/19",
            "id": "subnet-0f02e643572fe74a8",
            "map_public_ip_on_launch": false,
            "owner_id": "517778536975",
            "tags": {
              "KubernetesCluster": "kops.lnchub.com",
              "Name": "ap-southeast-1a.kops.lnchub.com",
              "SubnetType": "Public",
              "kubernetes.io/cluster/kops.lnchub.com": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0df976c57c399126b"
          },
          "dependencies": [
            "aws_vpc.kops-lnchub-com"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kops-lnchub-com",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:517778536975:vpc/vpc-0df976c57c399126b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0f30be218bc9d8f1b",
            "default_route_table_id": "rtb-0543bdc4784c15e45",
            "default_security_group_id": "sg-0388de0632695d82b",
            "dhcp_options_id": "dopt-b4cbc8d3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0df976c57c399126b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0543bdc4784c15e45",
            "owner_id": "517778536975",
            "tags": {
              "KubernetesCluster": "kops.lnchub.com",
              "Name": "kops.lnchub.com",
              "kubernetes.io/cluster/kops.lnchub.com": "owned"
            }
          }
        }
      ]
    }
  ]
}